# geodjango-world-borders

./: .env.example  Dockerfile.dev  Makefile  docker-compose.yml  entrypoint.sh  pyproject.toml  setup.cfg
geodjango/: settings.py
nginx/: Dockerfile.dev  default.conf
world/: admin.py  load.py  models.py
world/migrations/: 0001_initial.py  0002_alter_worldborder_fips.py
