[tool.poetry]
name = "geodjango"
version = "0.1.0"
description = "up skilling with geodjango"
authors = ["Steven Kyalo <skyalo100@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.6"
black = "^24.4.2"
flake8 = "^7.0.0"
django-extensions = "^3.2.3"
django-environ = "^0.11.2"
django-leaflet = "^0.30.0"
psycopg2 = "^2.9.9"
django-cors-headers = "^4.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
